--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,10 @@
         "type_traits": "cpp",
         "tuple": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "bit": "cpp",
+        "list": "cpp",
+        "memory": "cpp",
+        "deque": "cpp"
     }
 }
